# DemoTask

./: README.md
android/SeonTask/: settings.gradle
android/SeonTask/app/: build.gradle
android/SeonTask/app/src/androidTest/java/com/example/seontask/: ExampleInstrumentedTest.java
android/SeonTask/app/src/main/: AndroidManifest.xml
android/SeonTask/app/src/main/java/com/example/seontask/: MainActivity.java  NativeLib.java
android/SeonTask/app/src/main/res/layout/: activity_main.xml
android/SeonTask/app/src/main/res/values/: strings.xml  themes.xml
android/SeonTask/app/src/main/res/values-night/: themes.xml
android/SeonTask/app/src/test/java/com/example/seontask/: ExampleUnitTest.java
android/SeonTask/gradle/: libs.versions.toml
android/SeonTask/gradle/wrapper/: gradle-wrapper.properties
cppLib/: CMakeLists.txt  custom_parser.cpp  custom_parser.h  custom_parser_jni.cpp  test_custom_parser.cpp  test_custom_parser.h
